k8s/asgard/apps/apex-static/service.yaml
# k8s/asgard/apps/apex-static/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apex-static
  namespace: apex-static
spec:
  type: ClusterIP
  selector:
    app: apex-static
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
